--- a/KINESSO Regression analysis.ipynb
+++ b/KINESSO Regression analysis.ipynb
@@ -2284,105 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>tv_spend</th>\n",
-       "      <th>digital_spend</th>\n",
-       "      <th>xmas</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>350000</td>\n",
-       "      <td>215000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-02-01</td>\n",
-       "      <td>950000</td>\n",
-       "      <td>150000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-03-01</td>\n",
-       "      <td>1350000</td>\n",
-       "      <td>400000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       month  tv_spend  digital_spend  xmas\n",
-       "0 2018-01-01    350000         215000     1\n",
-       "1 2018-02-01    950000         150000     0\n",
-       "2 2018-03-01   1350000         400000     0"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "planned_spend['xmas'] = [1,0,0]\n",
-    "planned_spend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([12883498.83385151,  8819487.43165759, 10467003.44991146])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "planned_spend_X = planned_spend[['tv_spend','digital_spend','xmas']]\n",
-    "\n",
-    "y_pred_planned = reg_model.predict(planned_spend_X)\n",
-    "y_pred_planned"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2321,7 @@
        "      <td>2018-01-01</td>\n",
        "      <td>350000</td>\n",
        "      <td>215000</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1.288350e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2444,12 +2346,114 @@
       ],
       "text/plain": [
        "       month  tv_spend  digital_spend  xmas         sales\n",
-       "0 2018-01-01    350000         215000     1  1.288350e+07\n",
+       "0 2018-01-01    350000         215000     0  1.288350e+07\n",
        "1 2018-02-01    950000         150000     0  8.819487e+06\n",
        "2 2018-03-01   1350000         400000     0  1.046700e+07"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planned_spend['xmas'] = [0,0,0]\n",
+    "planned_spend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8206655.50260972,  8819487.43165759, 10467003.44991146])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "planned_spend_X = planned_spend[['tv_spend','digital_spend','xmas']]\n",
+    "\n",
+    "y_pred_planned = reg_model.predict(planned_spend_X)\n",
+    "y_pred_planned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>tv_spend</th>\n",
+       "      <th>digital_spend</th>\n",
+       "      <th>xmas</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>350000</td>\n",
+       "      <td>215000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.206656e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>950000</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.819487e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>1350000</td>\n",
+       "      <td>400000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.046700e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       month  tv_spend  digital_spend  xmas         sales\n",
+       "0 2018-01-01    350000         215000     0  8.206656e+06\n",
+       "1 2018-02-01    950000         150000     0  8.819487e+06\n",
+       "2 2018-03-01   1350000         400000     0  1.046700e+07"
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
